# SAT-solver-for-BNN

./: .gitignore  BNNSATsolver.opam  README.md  dune  dune-project
.github/workflows/: main.yml
bnn/: BNN.ml  BNN.mli  dune
classifier/: dune  main.ml
lib/: dune
sat-solver/: SATSolver.ml  SATSolver.mli  dune
test/: dune  test_BNNSATsolver.ml
utils/: utils.ml  utils.mli
