(lang dune 3.17)

(name BNNSATsolver)

(generate_opam_files true)

(source
 (github konstantiin/SAT-solver-for-BNN))

(authors "konstantiin")

(maintainers "konstantiin")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (allow_empty)
 (name BNNSATsolver)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
